    few too many 0xE1 bytes when filling text
    attribute RAM and into the CG MMIO region.
  - With -winrun command-line option or the setting
    "startcmd=true" (Windows only), you can now
    directly launch Windows programs on mounted local
    or overlay drives to run on the host. The option
    "startwait=false" can be used to disable waiting
    for Windows programs after started. (Wengier)
  - Added START command to run commands on Windows
    host system. The /MAX, /MIN, /HID options can
    be used to run the specified program maximized,
    minimized, or hidden (they can be shortened to
    +, -, _ respectively). This command is disabled
    by default, but can be enabled by either the
    "startcmd" config option (in [dos] section) or
    the -winrun command-line option (which will also
    enable the CLIP$ device for Windows clipboard
    support). START will run commands listed in the
    "startincon" config option (separated by space)
    in the Windows Command Prompt and wait for a key
    press before exiting. (Wengier)
  - Added SHELL= option to the [config] section in
    dosbox-x.conf to specify an alternative shell,
    e.g. "SHELL=4DOS.COM". (Wengier)
  - Added built-in 4DOS 8.00 shell for 4DOS features
    and capabilities. There is now a [4dos] section
    in the dosbox-x.conf file to act as the 4DOS.INI
    config file if you use this shell. (Wengier)
  - Added "Mouse wheel movements" menu (under "Main")
    to enable or disable the mouse wheel movements
    to arrow (up/down etc) feature. (Wengier)
  - Added "Quick right mouse button copy/paste" menu
    item toggle to allow quick Windows clipboard copy
    and paste via the right mouse button without any
    key modifier that may have been specified by the
    config option "clip_key_modifier". (Wengier)
  - Fixed mounting a directory with command-line like
    "dosbox-x .", and fixed mounting disk images with
    spaces via the "Drive" menu on Windows. (Wengier)