@@ -39,6 +39,7 @@
 
 static bool first_run=true;
 extern bool use_quick_reboot;
+extern bool startcmd, startwait, winautorun;
 extern bool enable_config_as_shell_commands;
 extern bool dos_shell_running_program;
 extern Bit16u countryNo;
@@ -1495,10 +1496,16 @@ void SHELL_Init() {
         const Section_prop * section=static_cast<Section_prop *>(control->GetSection("dos"));
 		use_quick_reboot = section->Get_bool("quick reboot");
 		enable_config_as_shell_commands = section->Get_bool("shell configuration as commands");
+		startwait = section->Get_bool("startwait");
+		winautorun=startcmd;
 		first_run=false;
     }
 	mainMenu.get_item("quick_reboot").check(use_quick_reboot).refresh_item(mainMenu);
 	mainMenu.get_item("shell_config_commands").check(enable_config_as_shell_commands).enable(true).refresh_item(mainMenu);
+#if defined(WIN32) && !defined(HX_DOS)
+    mainMenu.get_item("dos_win_autorun").check(winautorun).enable(true).refresh_item(mainMenu);
+    mainMenu.get_item("dos_win_wait").check(startwait).enable(true).refresh_item(mainMenu);
+#endif
 }
 
 /* Pfff... starting and running the shell from a configuration section INIT
